# src/routes/users.js
@@ -3,26 +3,15 @@ module.exports = app => {
   const Users = app.controllers.UserController
   const middelware = app.libs.authorization
 
-  app.get('/users/:id', (req, res) => {
-    Users.findById(req.params.id, {
-      attributes: ['id', 'name', 'email']
-    })
-      .then(result => res.json(result))
-      .catch(error => {
-        res.status(412).json({msg: error.message})
-      })
-  })
-
-  app.delete('/users/:id', (req, res) => {
-    Users.destroy({where: {id: req.params.id}})
-      .then(result => res.sendStatus(204))
-      .catch(error => {
-        res.status(412).json({msg: error.message})
-      })
-  })
-  
   app.route('/users')
+    .get(middelware.auth, Users.getUsers)
     .post(middelware.auth, Users.createUser)
+
+  app.route('/users/:id')
+    .get(middelware.auth, Users.getOneUser)
+    .put(middelware.auth, Users.updateUser)
+    .delete(middelware.auth, Users.deleteUser)
+    .patch()
 
   app.route('/users/login')
     .post(Users.authorization)
